--- a/FitTrack/src/main/resources/application.properties
+++ b/FitTrack/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${spring.datasource.url}
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -8,11 +9,9 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
 spring.jpa.hibernate.ddl-auto=update
-
 spring.main.allow-circular-references=true
-
 server.servlet.session.persistent=true
-
 logging.level.org.springframework.security=TRACE
 
+API_KEY={API_KEY}
 
